feat : processing of notes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 
         <p class="description">Enter the Bill amount and cash given by the customer and know the minimum number of notes to return</p>
 
-        <label for="bill-amount">Bill Amount : </label>
-        <input id="bill-amount" type="text"></input>
+        <label class="input-label" for="bill-amount">Bill Amount : </label>
+        <input class="input" id="bill-amount" type="text"></input>
 
-        <label for="cash-given"> Cash Given : </label>
-        <input id="cash-given" type="text"></input>
+        <label class="input-label" for="cash-given"> Cash Given : </label>
+        <input class="input" id="cash-given" type="text"></input>
 
 
         <button id="check-button">Check</button>
@@ -31,11 +31,18 @@
 
 
         <table class="change-table">
-            <caption> Return Change : </caption>
+            <caption> Return Change : <span id="returned-amount"></span> </caption>
 
             <tr>
                 <th>No. of notes</th>
-                <td></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
+                <td class="no-of-notes"></td>
             </tr>
             <tr>
                 <th>Notes</th>
