updated github link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <footer>
             <div>
                 <h2>Made by Al Hera Ahmad</h2>
-                <a target="_blank" class="footer-btn" href="https://github.com/iamalhera">Source Code</a>
+                <a target="_blank" class="footer-btn" href="https://github.com/iamalhera/cash-register-manager">Source Code</a>
             </div>
         </footer>
 
