--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
         
         <div id="div-bill-amount">
             <label for="bill-amount" class="input-label">Bill Amount : </label>
-            <input type="text" id="bill-amount" />
+            <input type="number" id="bill-amount" />
         </div>
 
         <button class="btn" id="next-button">Next</button>
 
         <div id="div-cash-given">
             <label for="cash-given" class="input-label">Cash Given : </label>
-            <input type="text" id="cash-given" />
+            <input type="number" id="cash-given" />
         </div>
         <button class="btn" id="check-button">Check</button>
         <div id="error-message"></div>
